# toGPRi_2026

./: README.md  pyproject.toml
togpri.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
togpri/core/: gprdata.py
togpri/examples/: P01.rd3  P02.rd3  P03.rad  P03.rd3  P04.rd3  P05.rad  P05.rd3  P06.rd3  P07.rad  P07.rd3  P08.rad  P08.rd3  P09.rad  P09.rd3  P10.rd3  P11.rad  P11.rd3  P12.rad  P12.rd3  P13.rd3  P14.rd3  P15.rd3  P16.rd3  P17.rd3  P18.rd3  P19.rd3  P20.rd3  P21.rd3  P22.rad  P22.rd3  P23.rad  P23.rd3  P24.rd3  P25.rd3  P26.rd3  P27.rd3  P28.rad  P28.rd3  P29.rd3  P30.rd3  (+18 more)
togpri/gui/: app.py  main_window.py
togpri/gui/dialogs/: session_config.py
togpri/gui/widgets/: filter_panel.py  grid3d_panel.py  local_cube_panel.py  radargram_canvas.py  topo_editor.py
togpri/io/: ramac.py
togpri/processing/: filters.py  grid3d.py  local_cube.py  local_tiff_export.py  ply_export.py  topography.py
