[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "togpri"
version = "2.0.0"
description = "Procesamiento y visualización GPR con corrección topográfica y export GeoTIFF"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "PyQt6>=6.6",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "pandas>=2.0",
]

[project.scripts]
togpri = "togpri.gui.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["togpri*"]